Created a transaction component and service. Working on the front-end

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="container">
+    <section>
+        <h1>Chart will be here</h1>
+        <div>For charts</div>
+    </section>
+    <section class="top-transaction-list">
+        
+    </section>
+</div>
