--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,5 @@
         <h1>Chart will be here</h1>
         <div>For charts</div>
     </section>
-    <section class="top-transaction-list">
-        
-    </section>
+    <app-transactions></app-transactions>
 </div>
