Added frontend features

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,2 @@
-<div class="container">
-    <section>
-        <h1>Chart will be here</h1>
-        <div>For charts</div>
-    </section>
-    <app-transactions></app-transactions>
-</div>
+ <app-transactions [topTransactions]="true"></app-transactions>
+  
