--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,7 +1,28 @@
-<section *ngIf="transactions.length > 0" class="top-transaction-list">
-    <ul *ngFor="let transaction of transactions">
-        <li>{{transaction.date}}</li>
-        <li>{{transaction.description}}</li>
-        <li>{{transaction.amount}}</li>
-    </ul>
+<section  class="container-fluid py-3">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Date</th>
+            <th scope="col">Description</th>
+            <th scope="col">Amount</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody *ngIf="transactions.length > 0 && showTransactions === true">
+          <tr *ngFor="let transaction of transactions; let i = index;">
+            <th scope="row">{{i + 1}}</th>
+            <td>{{transaction.date}}</td>
+            <td>{{transaction.description}}</td>
+            <td>{{transaction.amount}}</td>
+            <td>
+                <button class="btn btn-warning btn-sm">Edit</button>
+                <button class="btn btn-primary btn-sm" (click)="showNoteSection(i)">Note</button>
+                <button class="btn btn-primary btn-sm" (click)="removeTransaction(i)">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+        <app-note *ngIf="showTransactions == false" (add)="toggleShowTransactions()"></app-note>
+      </table>
 </section>
+  
